samples/_failures_safe/1761470364_b6be44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5712958.c: In function ‘main’:
./samples/SAFE/__tmp_c5712958.c:123:25: error: expected ‘;’ at end of input
  123 |     generate_sample_logs
      |                         ^
      |                         ;
./samples/SAFE/__tmp_c5712958.c:123:5: error: expected declaration or statement at end of input
  123 |     generate_sample_logs
      |     ^~~~~~~~~~~~~~~~~~~~
